--- a/inventary_pro/src/main/resources/application.properties
+++ b/inventary_pro/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=inventary_pro
+
+spring.datasource.url=jdbc:mysql://localhost:53306/inventory_pro_db
+spring.datasource.username=root
+spring.datasource.password=@UnaClav3
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.use_sql_comments=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=create
